feat: 🎸 支持设置默认首页

--- a/src/browser/pages/Container/Container.scss
+++ b/src/browser/pages/Container/Container.scss
@@ -36,6 +36,16 @@
           background-color: rgba(white, .3);
         }
 
+        &.active {
+          &:hover {
+            background-color: #004a77;
+          }
+
+          .icon {
+            color: #7fcfff;
+          }
+        }
+
         &.disabled {
           pointer-events: none;
 
